--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-owl-carousel": "^2.3.3",
