--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-pro-sidebar": "^0.7.1",
